# solgen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: libclang.cmake
example/: Car.h  README.md  SportCar.h  Submarine.h  Vehicle.h  solgen.conf
src/: Access.h  Arg.h  Class.h  CmdOptions.h  Conf.cpp  Conf.h  Enum.h  Field.h  FileUtils.cpp  FileUtils.h  Function.h  GenOptions.cpp  GenOptions.h  PTBuilder.cpp  PTBuilder.h  Parser.cpp  Parser.h  SolGen.cpp  SolGen.h  Type.cpp  Type.h  main.cpp  types.h  version.h
src/ArgHandler/: ArgHandler.cpp  ArgHandler.h  std_containers.hpp
src/generator/: Arg.cpp  Arg.h  Class.cpp  Class.h  Construct.cpp  Construct.h  Enum.cpp  Enum.h  Field.cpp  Field.h  Function.cpp  Function.h  Generated.h  Generator.cpp  Generator.h  Options.cpp  Options.h
src/utils/: FileUtils.cpp  FileUtils.h  StringUtils.h  format.cpp  format.h  matches.cpp  matches.h
